--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atomic-react-starter",
+  "name": "rock-paper-scissors",
   "private": true,
   "version": "0.0.0",
   "type": "module",
